added resume view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="">Home</a>
           <a href="#about">About</a>
           <a href="#projects">Projects</a>
-          <a href="/resume">R&#233;sum&#233;</a>
+          <a id="open-resume">R&#233;sum&#233;</a>
           <a style="cursor:pointer">Contact</a>
         </nav>
       </header>
@@ -311,5 +311,12 @@
           <a href="http://crm.jonlwhittaker.com" target="_blank">Try it out</a>
         </div>
       </div>
-  </body>
+    </div>
+    <div class="resume">
+      <button class="print-button"><img src="img/printer.svg" alt=""></button>
+      <button class="close-resume"><img src="img/x.svg" alt=""></button>
+      <embed id="resume-pdf" name="resume-pdf" class="resume-pdf" src="resume.pdf#toolbar=0&navpanes=0&pagemode=none" frameborder="0">
+      </embed>
+    </div>
+    </body>
 </html>
