wrote About Me section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="banner" id="home">
         <div class="section-wrapper">
           <div class="headshot">
-            <img src="img/mr_henderson.jpg" alt="headshot">
+            <img src="img/headshot.png" alt="headshot">
           </div>
           <div class="personal">
             <h1>Jon Whittaker</h1>
@@ -34,21 +34,18 @@
         <div class="section-wrapper">
           <div class="about-desc">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, harum a. 
-              Minima placeat repudiandae quam nulla nesciunt soluta alias voluptatibus unde dolorum, 
-              laboriosam laborum, quo cupiditate quisquam ipsum consectetur iure.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Maiores porro laudantium accusantium ullam quam est unde rerum cupiditate expedita, 
-              sint id asperiores. Incidunt minima consectetur aut suscipit, corrupti explicabo. Rerum?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, harum a. 
-              Minima placeat repudiandae quam nulla nesciunt soluta alias voluptatibus unde dolorum, 
-              laboriosam laborum, quo cupiditate quisquam ipsum consectetur iure.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Maiores porro laudantium accusantium ullam quam est unde rerum cupiditate expedita, 
-              sint id asperiores. Incidunt minima consectetur aut suscipit, corrupti explicabo. Rerum?</p>
+            <p>Born and raised in Upstate New York, I now live in West Fork, AR, with my lovely fianc&#233;e, our two cats, a tiny chihuahua, a bearded dragon, and a flock of chickens. Before I ended up here, I spent most of the last decade travelling around and living in various strange places. From working in a dog daycare in Manhattan to picking wild mushrooms in the mountains of New Mexico, backpacking through remote villages in India, or hitchhiking through Wyoming, I was always on the move.</p>
+            <p>In those years of being a <span>hopeless vagabond</span> spirited adventurer, aided by a relentless curiosty and the romantic idealism of a naive youth, I tried as hard as I could to learn everything a young man could learn. Along the way, I picked up a wide variety of trades and skills, but nothing ever seemed to satisfy me. I was well on my way to being the proverbial jack of all trades (and master of none), until I one day found myself staring at my laptop, scratching my head: </p>
+            <p>"Huh, you know, now that I think about it, I don't really even know how this thing works..."</p>
+            <p>This was unacceptable to me. A glaring oversight that needed immediate attention. Before I knew it, I was in deep, and I was hooked.</p>
+            <p>Starting with semiconductors and logic gates, I finally learned what all those 1s and 0s are that I've heard so much about. I moved on to memory and ALU instructions, the K&R C book, TCP/IP, OOP, web technologies, and so on, and quickly became obsessed; I couldn't get enough. For every question that I sought an answer to, countless new questions arose, each one unfolding into vast new worlds of knowledge. What started as just another conquest in my endless campaign of being a know-it-all quickly became a life-defining passion.</p>
+            <p>And just like that, my travel itch subsided. I didn't need to keep wandering around looking for new things to learn. I found the holy grail. There are more things to learn in the world of computers, programming, and technology than someone could fit into a lifetime, with each new year bringing even more. The quest will never end, the finish line will never be reached, and I wouldn't want it any other way.</p>
+            <p>So here's my little site. This is my attempt to put myself out there, to try to turn this passion into something more. Put simply, I'm trying to start my dream career; to find somewhere to get my foot in the door, where I can be a part of something bigger, and put my knowledge, skills, and passion into something productive.</p>
+            <p>Below you'll find a few little projects that I've made recently, showcasing a variety of different tech, hopefully illustrating my versatility and willingness to learn new things.</p>
+            <p>Thanks for visiting; feel free to reach out and say hello.</p>
           </div>
           <div class="about-skills">
-            <h2>Skills</h2>
+            <h2>My Skills</h2>
             <div class="skills">
               <div>
                 <p>Languages</p>
