--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Jon Whittaker</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+
   </head>
   <body>
     <div class="container">
