--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                   <li>Apache</li>
                   <li>Nginx</li>
                   <li>Git</li>
-                  <li>Unix/Linux/POSIX</li>
-                  <li>MongoDB</li>
+                  <li>Linux</li>
+                  <li>JSON/REST</li>
                 </ul>
               </div> 
             </div>
