--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
     <div class="resume">
       <button class="print-button"><img src="img/printer.svg" alt=""></button>
       <button class="close-resume"><img src="img/x.svg" alt=""></button>
-      <embed id="resume-pdf" name="resume-pdf" class="resume-pdf" src="resume.pdf#toolbar=0&navpanes=0&pagemode=none" frameborder="0">
-      </embed>
+      <iframe id="resume-pdf" name="resume-pdf" class="resume-pdf" src="resume.pdf#toolbar=0&navpanes=0&pagemode=none" frameborder="0">
+      </iframe>
     </div>
     </body>
 </html>
