--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class="personal">
             <h1>Jon Whittaker</h1>
-            <h2>Software Developer | Builder | Tinkerer</h2>
+            <h2>Full-Stack Developer | Builder | Tinkerer</h2>
           </div>
         </div>
         
